Pac window design changes & database update

--- a/DiplomClient/DoctorWindow.xaml
+++ b/DiplomClient/DoctorWindow.xaml
@@ -9,27 +9,6 @@
 		Height="450"
 		Width="800">
 	<Grid>
-		<Button x:Name="LookScheduleButton"
-				Content="Переглянути розклад"
-				HorizontalAlignment="Left"
-				Margin="10,88,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="LookScheduleButton_Click" />
-		<Button x:Name="MyPacientsButton"
-				Content="Мої пацієнти"
-				HorizontalAlignment="Left"
-				Margin="10,113,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="MyPacientsButton_Click" />
-		<Button x:Name="BillsButton"
-				Content="Рахунки"
-				HorizontalAlignment="Left"
-				Margin="10,138,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="BillsButton_Click" />
 		<Button x:Name="AddVisitButton"
 				Content="Запис на прийом"
 				HorizontalAlignment="Left"
@@ -71,7 +50,8 @@
 				Margin="263,239,0,0"
 				VerticalAlignment="Top"
 				Width="Auto"
-				Click="AddNoteButton_Click" />
+				Click="AddNoteButton_Click"
+				Visibility="Visible" />
 		<Button x:Name="PacVisitedButton"
 				Content="Пацієнт з'явився на прийом"
 				HorizontalAlignment="Left"
@@ -86,13 +66,6 @@
 				VerticalAlignment="Top"
 				Width="Auto"
 				Click="AddVisitConfirmButton_Click" />
-		<Button x:Name="AddBillConfirmButton"
-				Content="Додати рахунок"
-				HorizontalAlignment="Left"
-				Margin="263,314,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="AddBillConfirmButton_Click" />
 
 		<DataGrid Visibility="Hidden"
 				  HorizontalAlignment="Left"
@@ -192,58 +165,102 @@
 					 Margin="379,10,0,0"
 					 VerticalAlignment="Top"
 					 Width="403" />
-		<TextBox x:Name="BillNameTextBox"
-				 Visibility="Hidden"
-				 HorizontalAlignment="Left"
-				 Height="23"
-				 Margin="453,264,0,0"
-				 TextWrapping="Wrap"
-				 VerticalAlignment="Top"
-				 Width="225" />
-		<TextBox x:Name="BillCostATextBox"
-				 Visibility="Hidden"
-				 HorizontalAlignment="Left"
-				 Height="23"
-				 Margin="453,323,0,0"
-				 TextWrapping="Wrap"
-				 VerticalAlignment="Top"
-				 Width="90"
-				 GotFocus="BillCostATextBox_GotFocus"
-				 LostFocus="BillCostATextBox_LostFocus" />
-		<TextBox x:Name="BillCostBTextBox"
-				 Visibility="Hidden"
-				 HorizontalAlignment="Left"
-				 Height="23"
-				 Margin="556,323,0,0"
-				 TextWrapping="Wrap"
-				 VerticalAlignment="Top"
-				 Width="70"
-				 GotFocus="BillCostBTextBox_GotFocus"
-				 LostFocus="BillCostBTextBox_LostFocus" />
-		<Label x:Name="BillNameLable"
-			   Visibility="Hidden"
-			   Content="Назва рахунку:"
-			   HorizontalAlignment="Left"
-			   Margin="453,233,0,0"
-			   VerticalAlignment="Top" />
-		<Label x:Name="BillCostLable"
-			   Visibility="Hidden"
-			   Content="Сума:"
-			   HorizontalAlignment="Left"
-			   Margin="453,292,0,0"
-			   VerticalAlignment="Top" />
-		<Label x:Name="BillComaLable"
-			   Visibility="Hidden"
-			   Content=","
-			   HorizontalAlignment="Left"
-			   Margin="543,323,0,0"
-			   VerticalAlignment="Top" />
-		<Label x:Name="BillGRNLable"
-			   Visibility="Hidden"
-			   Content="грн."
-			   HorizontalAlignment="Left"
-			   Margin="626,320,0,0"
-			   VerticalAlignment="Top" />
+
+		<StackPanel x:Name="MainMenuStackPanel"
+					HorizontalAlignment="Left"
+					Height="163"
+					Margin="10,10,0,0"
+					VerticalAlignment="Top"
+					Width="142">
+			<Button x:Name="LookScheduleButton"
+					Content="Переглянути розклад"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Top"
+					Margin="0,10,0,0"
+					Width="Auto"
+					Click="LookScheduleButton_Click" />
+			<Button x:Name="MyPacientsButton"
+					Content="Мої пацієнти"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Top"
+					Margin="0,10,0,0"
+					Width="Auto"
+					Click="MyPacientsButton_Click" />
+			<Button x:Name="BillsButton"
+					Content="Рахунки"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Top"
+					Margin="0,10,0,0"
+					Width="Auto"
+					Click="BillsButton_Click" />
+		</StackPanel>
+		<Canvas x:Name="BiilCanvas"
+				HorizontalAlignment="Left"
+				Height="170"
+				Margin="263,20,0,0"
+				VerticalAlignment="Top"
+				Width="276"
+				Visibility="Hidden">
+
+			<Label x:Name="BillNameLable"
+				   Content="Назва рахунку:"
+				   HorizontalAlignment="Left"
+				   Canvas.Top="10"
+				   Canvas.Left="10"
+				   VerticalAlignment="Top" />
+			<TextBox x:Name="BillNameTextBox"
+					 HorizontalAlignment="Left"
+					 Height="23"
+					 Canvas.Top="41"
+					 Canvas.Left="10"
+					 TextWrapping="Wrap"
+					 VerticalAlignment="Top"
+					 Width="225" />
+			<TextBox x:Name="BillCostATextBox"
+					 HorizontalAlignment="Left"
+					 Height="23"
+					 Canvas.Top="100"
+					 Canvas.Left="10"
+					 TextWrapping="Wrap"
+					 VerticalAlignment="Top"
+					 Width="90"
+					 GotFocus="BillCostATextBox_GotFocus"
+					 LostFocus="BillCostATextBox_LostFocus" />
+			<TextBox x:Name="BillCostBTextBox"
+					 HorizontalAlignment="Left"
+					 Height="23"
+					 Canvas.Top="100"
+					 Canvas.Left="113"
+					 TextWrapping="Wrap"
+					 VerticalAlignment="Top"
+					 Width="70"
+					 GotFocus="BillCostBTextBox_GotFocus"
+					 LostFocus="BillCostBTextBox_LostFocus" />
+			<Label x:Name="BillCostLable"
+				   Content="Сума:"
+				   HorizontalAlignment="Left"
+				   Canvas.Top="69"
+				   Canvas.Left="10"
+				   VerticalAlignment="Top" />
+			<Label x:Name="BillComaLable"
+				   Content=","
+				   HorizontalAlignment="Left"
+				   Canvas.Top="100"
+				   Canvas.Left="100"
+				   VerticalAlignment="Top" />
+			<Label x:Name="BillGRNLable"
+				   Content="грн."
+				   HorizontalAlignment="Left"
+				   Canvas.Top="97"
+				   Canvas.Left="183"
+				   VerticalAlignment="Top" />
+			<Button x:Name="AddBillConfirmButton"
+					Content="Додати рахунок"
+					Width="Auto"
+					Click="AddBillConfirmButton_Click"
+					Canvas.Top="140"
+					Canvas.Left="10" />
+		</Canvas>
 
 	</Grid>
 </Window>
