--- a/DiplomClient/PatientWindow.xaml
+++ b/DiplomClient/PatientWindow.xaml
@@ -6,115 +6,192 @@
 		xmlns:local="clr-namespace:DiplomClient"
 		mc:Ignorable="d"
 		Title="PatientWindow"
-		Height="511.976"
-		Width="1002.096">
+		Height="744"
+		Width="850"
+		SizeToContent="WidthAndHeight">
 
 	<Grid>
-		<Label x:Name="MainLable"
-			   Content="Оберіть лікаря, розклад якого ви хотіли б переглянути:"
-			   HorizontalAlignment="Left"
-			   Margin="37,33,0,0"
-			   VerticalAlignment="Top"
-			   Width="Auto" 
-			   Visibility="Hidden"/>
-		<Button x:Name="MyVisitsButton"
-				Content="Мої візити"
-				HorizontalAlignment="Left"
-				Margin="38,159,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="MyVisitsButton_Click" />
-		<Button x:Name="BillsButton"
-				Content="Мої рахунки"
-				HorizontalAlignment="Left"
-				Margin="38,184,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="BillsButton_Click" />
-		<Button x:Name="LKButton"
-				Content="Подивитись ЛК"
-				HorizontalAlignment="Left"
-				Margin="37,209,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="LKButton_Click" />
+		<Grid.Background>
+			<ImageBrush ImageSource="background_img_mirror.png"
+						Stretch="Uniform" />
+		</Grid.Background>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition x:Name="Col0"
+							  Width="Auto" />
+			<ColumnDefinition x:Name="Col1"
+							  Width="Auto" />
+			<ColumnDefinition x:Name="Col2"
+							  Width="Auto" />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition x:Name="Row0"
+						   Height="160"></RowDefinition>
+			<RowDefinition x:Name="Row1"
+						   Height="Auto"></RowDefinition>
+			<RowDefinition x:Name="Row2"
+						   Height="Auto"></RowDefinition>
+		</Grid.RowDefinitions>
 		<Button x:Name="VisitBookingButton"
+				Grid.Column="0"
+				Grid.RowSpan="3"
 				Content="Записатись на прийом"
-				HorizontalAlignment="Left"
-				Margin="38,134,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="VisitBookingButton_Click" />
-		<Button x:Name="PayBillButton"
-				Content="Оплатити рахунок"
-				HorizontalAlignment="Left"
-				Margin="38,310,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="PayBillButton_Click" 
-				Visibility="Hidden"/>
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,-120,20,0"
+				Width="129"
+				Click="VisitBookingButton_Click"
+				Height="20" />
+		<Button x:Name="MyVisitsButton"
+				Grid.Column="0"
+				Grid.RowSpan="3"
+				Content="Мої візити"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,-60,20,0"
+				Width="61"
+				Click="MyVisitsButton_Click"
+				Height="20" />
+		<Button x:Name="BillsButton"
+				Grid.Column="0"
+				Grid.RowSpan="3"
+				Content="Мої рахунки"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,0,20,0"
+				Width="72"
+				Click="BillsButton_Click"
+				Height="20" />
+		<Button x:Name="LKButton"
+				Grid.Column="0"
+				Grid.RowSpan="3"
+				Content="Подивитись ЛК"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,60,20,0"
+				Width="88"
+				Click="LKButton_Click"
+				Height="20" />
 		<Button x:Name="BackButton"
+				Grid.RowSpan="3"
+				Grid.Column="0"
 				Content="Назад"
-				HorizontalAlignment="Left"
-				Margin="38,370,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="BackButton_Click" 
-				Visibility="Hidden"/>
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,120,20,0"
+				Width="37"
+				Click="BackButton_Click"
+				Visibility="Hidden"
+				Height="20" />
+		<Button x:Name="BookingButton"
+				Grid.RowSpan="3"
+				Grid.Column="0"
+				Content="Записатися"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,-60,20,0"
+				Width="66"
+				Click="BookingButton_Click"
+				Visibility="Hidden"
+				Height="20" />
+		<Button x:Name="PayBillButton"
+				Grid.RowSpan="3"
+				Grid.Column="0"
+				Content="Оплатити рахунок"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,0,20,0"
+				Width="104"
+				Click="PayBillButton_Click"
+				Visibility="Hidden"
+				Height="20" />
 		<DataGrid x:Name="InfoTableDataGrid"
+				  Grid.Column="2"
+				  Grid.Row="0"
 				  IsReadOnly="True"
 				  Visibility="Hidden"
-				  HorizontalAlignment="Left"
+				  HorizontalAlignment="Center"
 				  Height="371"
-				  Margin="355,10,0,0"
 				  VerticalAlignment="Top"
-				  Width="629">
-		</DataGrid>
-		<Image x:Name="DocImage"
-			   HorizontalAlignment="Left"
-			   Height="100"
-			   Margin="460,10,0,0"
+				  Width="629"
+				  Margin="20,20,20,20" />
+
+		<Label x:Name="MainLable"
+			   Grid.Column="2"
+			   Grid.Row="0"
+			   HorizontalAlignment="Center"
 			   VerticalAlignment="Top"
-			   Width="100" />
+			   Content="Оберіть лікаря, розклад якого ви хотіли б переглянути:"
+			   Width="Auto"
+			   Visibility="Hidden"
+			   Height="Auto" />
 		<Label x:Name="PIBLable"
+			   Grid.Column="2"
+			   Grid.Row="1"
 			   Content="PIB"
-			   HorizontalAlignment="Left"
-			   Margin="719,75,0,0"
+			   HorizontalAlignment="Center"
 			   VerticalAlignment="Top"
-			   Visibility="Hidden" />
+			   Visibility="Hidden"
+			   Height="25"
+			   Width="Auto" />
 		<Label x:Name="ExperienceLable"
+			   Grid.Column="2"
+			   Grid.Row="1"
 			   Content="Expa"
-			   HorizontalAlignment="Left"
-			   Margin="633,101,0,0"
+			   HorizontalAlignment="Center"
+			   Margin="0,25,323,0"
 			   VerticalAlignment="Top"
-			   Visibility="Hidden" />
+			   Visibility="Hidden"
+			   Height="25"
+			   Width="Auto" />
 		<Label x:Name="DegreeLable"
+			   Grid.Column="2"
+			   Grid.Row="1"
 			   Content="Degree"
-			   HorizontalAlignment="Left"
-			   Margin="794,101,0,0"
+			   HorizontalAlignment="Center"
+			   Margin="326,25,0,0"
 			   VerticalAlignment="Top"
-			   Visibility="Hidden" />
-		<Label x:Name="CommentsLable"
-			   Content="Comments"
-			   HorizontalAlignment="Left"
-			   Margin="601,339,0,0"
-			   VerticalAlignment="Top"
-			   Visibility="Hidden" />
+			   Visibility="Hidden"
+			   Height="25"
+			   Width="Auto" />
 		<Label x:Name="ScheduleLable"
+			   Grid.Column="2"
+			   Grid.Row="1"
 			   Content="Розклад"
-			   HorizontalAlignment="Left"
-			   Margin="601,141,0,0"
+			   HorizontalAlignment="Center"
+			   Margin="0,50,0,0"
 			   VerticalAlignment="Top"
-			   Visibility="Hidden" />
+			   Visibility="Hidden"
+			   Height="25"
+			   Width="Auto" />
+		<Label x:Name="CommentsLable"
+			   Grid.Column="2"
+			   Grid.Row="2"
+			   Content="Comments"
+			   HorizontalAlignment="Center"
+			   VerticalAlignment="Top"
+			   Visibility="Hidden"
+			   Height="25"
+			   Width="Auto" />
+		<Image x:Name="DocImage"
+			   Grid.Column="1"
+			   Grid.Row="0"
+			   VerticalAlignment="Top"
+			   Height="100"
+			   Width="100"
+			   Visibility="Hidden"
+			   Margin="0,20,0,0" />
+
 		<DataGrid x:Name="DoctorsListDataGrid"
-				  IsReadOnly="True"
-				  HorizontalAlignment="Left"
-				  Height="62"
-				  Margin="565,10,0,0"
+				  Grid.Column="2"
+				  Grid.Row="0"
+				  HorizontalAlignment="Center"
 				  VerticalAlignment="Top"
-				  Width="419"
+				  IsReadOnly="True"
+				  Height="100"
+				  Width="420"
 				  SelectedCellsChanged="DoctorsListDataGrid_SelectedCellsChanged"
-				  Visibility="Hidden">
+				  Visibility="Hidden"
+				  Margin="30,30,30,30">
 			<DataGrid.Columns>
 				<DataGridTextColumn Header="Ім'я"
 									Binding="{Binding Name}" />
@@ -134,12 +211,14 @@
 			</DataGrid.Columns>
 		</DataGrid>
 		<DataGrid x:Name="ScheduleDataGrid"
+				  Grid.Column="2"
+				  Grid.Row="1"
 				  IsReadOnly="True"
-				  HorizontalAlignment="Left"
-				  Height="163"
-				  Margin="565,167,0,0"
+				  HorizontalAlignment="Center"
+				  Height="200"
+				  Margin="0,80,0,30"
 				  VerticalAlignment="Top"
-				  Width="419"
+				  Width="420"
 				  Visibility="Hidden">
 			<DataGrid.Columns>
 				<DataGridTextColumn Header="Дата"
@@ -174,12 +253,14 @@
 			</DataGrid.Columns>
 		</DataGrid>
 		<DataGrid x:Name="CommentsDataGrid"
+				  Grid.Column="2"
+				  Grid.Row="2"
 				  IsReadOnly="True"
-				  HorizontalAlignment="Left"
-				  Height="84"
-				  Margin="565,370,0,0"
+				  HorizontalAlignment="Center"
+				  Height="150"
+				  Margin="0,30,0,30"
 				  VerticalAlignment="Top"
-				  Width="419"
+				  Width="420"
 				  Visibility="Hidden">
 			<DataGrid.Columns>
 				<DataGridTextColumn Header="ПІБ"
@@ -188,21 +269,15 @@
 									Binding="{Binding Room}" />
 			</DataGrid.Columns>
 		</DataGrid>
-		<Button x:Name="BookingButton"
-				Content="Записатися"
-				HorizontalAlignment="Left"
-				Margin="490,310,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="BookingButton_Click"
-				Visibility="Hidden" />
 		<RichTextBox x:Name="LKRichTextBox"
-					 HorizontalAlignment="Left"
-					 Margin="500,100,0,0"
+					 Grid.Column="2"
+					 Grid.Row="1"
+					 HorizontalAlignment="Center"
 					 VerticalAlignment="Top"
 					 Width="400"
 					 Height="300"
 					 IsReadOnly="True"
-					 Visibility="Hidden" />
+					 Visibility="Hidden"
+					 Margin="20,20,20,20" />
 	</Grid>
 </Window>
