--- a/DiplomClient/PatientWindow.xaml
+++ b/DiplomClient/PatientWindow.xaml
@@ -156,7 +156,7 @@
 		<Label x:Name="CommentsLable"
 			   Grid.Column="2"
 			   Grid.Row="2"
-			   Content="Comments"
+			   Content="Коментарі"
 			   HorizontalAlignment="Center"
 			   VerticalAlignment="Top"
 			   Visibility="Hidden"
@@ -262,6 +262,9 @@
 				<DataGridTextColumn Header="Кабінет"
 									Binding="{Binding Room}" />
 				<DataGridTextColumn Header="Login"
+									Binding="{Binding Id}"
+									Visibility="Hidden" />
+				<DataGridTextColumn Header="Login"
 									Binding="{Binding Login}"
 									Visibility="Hidden" />
 				<DataGridTextColumn Header="Experience"
@@ -281,7 +284,7 @@
 				  IsReadOnly="True"
 				  HorizontalAlignment="Center"
 				  Height="200"
-				  Margin="0,80,0,30"
+				  Margin="0,80,0,10"
 				  VerticalAlignment="Top"
 				  Width="420"
 				  Visibility="Hidden">
@@ -328,10 +331,22 @@
 				  Width="420"
 				  Visibility="Hidden">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="ПІБ"
-									Binding="{Binding PIB}" />
-				<DataGridTextColumn Header="Кабінет"
-									Binding="{Binding Room}" />
+				<DataGridTextColumn Header="ПІБ користувача"
+									Binding="{Binding PacientPIB}" />
+				<DataGridTextColumn Header="Id"
+									Binding="{Binding Id}"
+									Visibility="Hidden" />
+				<DataGridTextColumn Header="Date"
+									Binding="{Binding Date}"
+									Visibility="Hidden" />
+				<DataGridTextColumn Header="Текст"
+									Binding="{Binding CommentText}"
+									Width="150" />
+				<DataGridTextColumn Header="Оцінка"
+									Binding="{Binding Rating}" />
+				<DataGridTextColumn Header="PacientId"
+									Binding="{Binding PacientId}"
+									Visibility="Hidden" />
 			</DataGrid.Columns>
 		</DataGrid>
 		<RichTextBox x:Name="LKRichTextBox"
@@ -344,5 +359,16 @@
 					 IsReadOnly="True"
 					 Visibility="Hidden"
 					 Margin="20,20,20,20" />
+		<ScrollViewer x:Name="CommentsScrollViewer"
+					  Grid.Column="2"
+					  Grid.Row="2"
+					  HorizontalAlignment="Center"
+					  VerticalAlignment="Top"
+					  Height="150"
+					  Width="420"
+					  Margin="0,30,0,30"
+					  HorizontalScrollBarVisibility="Auto"
+					  VerticalScrollBarVisibility="Visible"/>
+
 	</Grid>
 </Window>
