Delete reseption added & minor changes

--- a/DiplomClient/PatientWindow.xaml
+++ b/DiplomClient/PatientWindow.xaml
@@ -38,7 +38,7 @@
 				HorizontalAlignment="Center"
 				VerticalAlignment="Center"
 				Margin="20,-120,20,0"
-				Width="129"
+				Width="130"
 				Click="VisitBookingButton_Click"
 				Height="20" />
 		<Button x:Name="MyVisitsButton"
@@ -48,7 +48,7 @@
 				HorizontalAlignment="Center"
 				VerticalAlignment="Center"
 				Margin="20,-60,20,0"
-				Width="61"
+				Width="130"
 				Click="MyVisitsButton_Click"
 				Height="20" />
 		<Button x:Name="BillsButton"
@@ -58,7 +58,7 @@
 				HorizontalAlignment="Center"
 				VerticalAlignment="Center"
 				Margin="20,0,20,0"
-				Width="72"
+				Width="130"
 				Click="BillsButton_Click"
 				Height="20" />
 		<Button x:Name="LKButton"
@@ -68,9 +68,19 @@
 				HorizontalAlignment="Center"
 				VerticalAlignment="Center"
 				Margin="20,60,20,0"
-				Width="88"
+				Width="130"
 				Click="LKButton_Click"
 				Height="20" />
+		<Button x:Name="ExitButton"
+				Grid.Column="0"
+				Grid.RowSpan="3"
+				Content="Вихід"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,180,20,0"
+				Width="130"
+				Height="20"
+				Click="ExitButton_Click" />
 		<Button x:Name="BackButton"
 				Grid.RowSpan="3"
 				Grid.Column="0"
@@ -93,6 +103,17 @@
 				Click="BookingButton_Click"
 				Visibility="Hidden"
 				Height="20" />
+		<Button x:Name="DeleteVisitButton"
+				Grid.RowSpan="3"
+				Grid.Column="0"
+				Content="Відмінити візит"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,0,20,0"
+				Width="Auto"
+				Visibility="Hidden"
+				Height="20"
+				Click="DeleteVisitButton_Click" />
 		<Button x:Name="PayBillButton"
 				Grid.RowSpan="3"
 				Grid.Column="0"
@@ -204,8 +225,12 @@
 				  Height="371"
 				  VerticalAlignment="Top"
 				  Width="629"
-				  Margin="20,20,20,20">
+				  Margin="20,20,20,20"
+				  SelectedCellsChanged="MyVisitsDataGrid_SelectedCellsChanged">
 			<DataGrid.Columns>
+				<DataGridTextColumn Header="Id"
+									Binding="{Binding Id}" 
+									Visibility="Hidden"/>
 				<DataGridTextColumn Header="Дата прийому"
 									Binding="{Binding Date}" />
 				<DataGridTextColumn Header="Час прийому"
