Doctor window gesign modyfication & comments added

--- a/DiplomClient/DoctorWindow.xaml
+++ b/DiplomClient/DoctorWindow.xaml
@@ -7,78 +7,159 @@
 		mc:Ignorable="d"
 		Title="DoctorWindow"
 		Height="450"
-		Width="800">
+		Width="800"
+		SizeToContent="WidthAndHeight">
 	<Grid>
-		<Button x:Name="AddVisitButton"
-				Content="Запис на прийом"
-				HorizontalAlignment="Left"
-				Margin="10,205,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="AddVisitButton_Click" />
-		<Button x:Name="EditLKButton"
-				Content="Редагування ЛК"
-				HorizontalAlignment="Left"
-				Margin="10,230,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="EditLKButton_Click" />
-		<Button x:Name="AddBillButton"
-				Content="Додавання рахунку"
-				HorizontalAlignment="Left"
-				Margin="10,255,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="AddBillButton_Click" />
-		<Button x:Name="FixPacientButton"
-				Content="Закріпити пацієнта"
-				HorizontalAlignment="Left"
-				Margin="10,302,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="FixPacientButton_Click" />
-		<Button x:Name="BackButton"
-				Content="Back"
-				HorizontalAlignment="Left"
-				Margin="10,352,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="BackButton_Click" />
-		<Button x:Name="AddNoteButton"
-				Content="Додати"
-				HorizontalAlignment="Left"
-				Margin="263,239,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="AddNoteButton_Click"
+		<Grid.Background>
+			<ImageBrush ImageSource="background_img_mirror.png"
+						Stretch="Uniform" />
+		</Grid.Background>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition x:Name="Col0"
+							  Width="Auto" />
+			<ColumnDefinition x:Name="Col1"
+							  Width="Auto" />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition x:Name="Row0"
+						   Height="Auto"></RowDefinition>
+		</Grid.RowDefinitions>
+		<Button x:Name="LookScheduleButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Переглянути розклад"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,-120,20,0"
+				Width="130"
+				Click="LookScheduleButton_Click" />
+		<Button x:Name="MyPacientsButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Мої пацієнти"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,-60,20,0"
+				Width="130"
+				Click="MyPacientsButton_Click" />
+		<Button x:Name="BillsButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Рахунки"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,0,20,0"
+				Width="130"
+				Click="BillsButton_Click" />
+		<Button x:Name="CommentsButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Коментарі"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,60,20,0"
+				Width="130"
+				Click="CommentsButton_Click" />
+		<Button x:Name="ExitButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Вихід"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,180,20,0"
+				Width="130"
+				Height="20"
+				Click="ExitButton_Click"
 				Visibility="Visible" />
-		<Button x:Name="PacVisitedButton"
-				Content="Пацієнт з'явився на прийом"
-				HorizontalAlignment="Left"
-				Margin="263,264,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="PacVisitedButton_Click" />
+		<Button x:Name="AddVisitButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Запис на прийом"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,-60,0,0"
+				Width="160"
+				Click="AddVisitButton_Click"
+				Visibility="Hidden" />
 		<Button x:Name="AddVisitConfirmButton"
+				Grid.Column="0"
+				Grid.Row="0"
 				Content="Додати запис"
-				HorizontalAlignment="Left"
-				Margin="263,289,0,0"
-				VerticalAlignment="Top"
-				Width="Auto"
-				Click="AddVisitConfirmButton_Click" />
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,0,0,0"
+				Width="160"
+				Click="AddVisitConfirmButton_Click"
+				Visibility="Hidden" />
+		<Button x:Name="PacVisitedButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Пацієнт з'явився на прийом"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,0,0,0"
+				Width="160"
+				Click="PacVisitedButton_Click"
+				Visibility="Hidden" />
+		<Button x:Name="FixPacientButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Закріпити пацієнта"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,60,0,0"
+				Width="160"
+				Click="FixPacientButton_Click"
+				Visibility="Hidden" />
+		<Button x:Name="EditLKButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Редагування ЛК"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,-60,0,0"
+				Width="130"
+				Click="EditLKButton_Click"
+				Visibility="Hidden" />
+		<Button x:Name="AddBillButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Додавання рахунку"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,0,0,0"
+				Width="130"
+				Click="AddBillButton_Click"
+				Visibility="Hidden" />
+		<Button x:Name="AddNoteButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Додати"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,0,0,0"
+				Width="130"
+				Click="AddNoteButton_Click"
+				Visibility="Hidden" />
+		<Button x:Name="BackButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Назад"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="20,160,20,0"
+				Width="130"
+				Click="BackButton_Click"
+				Visibility="Hidden" />
 
-		<DataGrid Visibility="Hidden"
-				  HorizontalAlignment="Left"
-				  Height="249"
-				  Margin="479,10,0,0"
-				  VerticalAlignment="Top"
-				  Width="303" />
 		<DataGrid x:Name="ScheduleDataGrid"
+				  Grid.Column="1"
+				  Grid.Row="0"
 				  Visibility="Hidden"
 				  IsReadOnly="True"
-				  HorizontalAlignment="Left"
-				  Height="163"
-				  Margin="363,10,0,0"
+				  HorizontalAlignment="Center"
+				  Height="300"
+				  Margin="50,20,50,20"
 				  VerticalAlignment="Top"
 				  Width="419">
 			<DataGrid.Columns>
@@ -116,11 +197,13 @@
 			</DataGrid.Columns>
 		</DataGrid>
 		<DataGrid x:Name="MyPacDataGrid"
+				  Grid.Column="1"
+				  Grid.Row="0"
 				  Visibility="Hidden"
 				  IsReadOnly="True"
-				  HorizontalAlignment="Left"
-				  Height="163"
-				  Margin="363,10,0,0"
+				  HorizontalAlignment="Center"
+				  Height="300"
+				  Margin="50,20,50,20"
 				  VerticalAlignment="Top"
 				  Width="419">
 			<DataGrid.Columns>
@@ -134,10 +217,12 @@
 			</DataGrid.Columns>
 		</DataGrid>
 		<DataGrid x:Name="BillsDataGrid"
+				  Grid.Column="1"
+				  Grid.Row="0"
 				  Visibility="Hidden"
-				  HorizontalAlignment="Left"
-				  Height="157"
-				  Margin="363,33,0,0"
+				  HorizontalAlignment="Center"
+				  Height="300"
+				  Margin="50,20,50,20"
 				  VerticalAlignment="Top"
 				  Width="419">
 			<DataGrid.Columns>
@@ -159,45 +244,33 @@
 			</DataGrid.Columns>
 		</DataGrid>
 		<RichTextBox x:Name="EditLKRichTextBox"
+					 Grid.Column="1"
+					 Grid.Row="0"
 					 Visibility="Hidden"
-					 HorizontalAlignment="Left"
+					 HorizontalAlignment="Center"
 					 Height="180"
-					 Margin="379,10,0,0"
+					 Margin="50,20,50,20"
 					 VerticalAlignment="Top"
 					 Width="403" />
+		<ScrollViewer x:Name="CommentsScrollViewer"
+					  Grid.Column="1"
+					  Grid.Row="0"
+					  HorizontalAlignment="Center"
+					  VerticalAlignment="Top"
+					  Height="300"
+					  Width="420"
+					  Margin="50,20,50,20"
+					  HorizontalScrollBarVisibility="Auto"
+					  VerticalScrollBarVisibility="Visible"
+					  Visibility="Hidden" />
 
-		<StackPanel x:Name="MainMenuStackPanel"
-					HorizontalAlignment="Left"
-					Height="163"
-					Margin="10,10,0,0"
-					VerticalAlignment="Top"
-					Width="142">
-			<Button x:Name="LookScheduleButton"
-					Content="Переглянути розклад"
-					HorizontalAlignment="Center"
-					VerticalAlignment="Top"
-					Margin="0,10,0,0"
-					Width="Auto"
-					Click="LookScheduleButton_Click" />
-			<Button x:Name="MyPacientsButton"
-					Content="Мої пацієнти"
-					HorizontalAlignment="Center"
-					VerticalAlignment="Top"
-					Margin="0,10,0,0"
-					Width="Auto"
-					Click="MyPacientsButton_Click" />
-			<Button x:Name="BillsButton"
-					Content="Рахунки"
-					HorizontalAlignment="Center"
-					VerticalAlignment="Top"
-					Margin="0,10,0,0"
-					Width="Auto"
-					Click="BillsButton_Click" />
-		</StackPanel>
+
 		<Canvas x:Name="BiilCanvas"
-				HorizontalAlignment="Left"
+				Grid.Column="1"
+				Grid.Row="0"
+				HorizontalAlignment="Center"
 				Height="170"
-				Margin="263,20,0,0"
+				Margin="50,50,50,50"
 				VerticalAlignment="Top"
 				Width="276"
 				Visibility="Hidden">
