--- a/DiplomClient/DoctorWindow.xaml
+++ b/DiplomClient/DoctorWindow.xaml
@@ -141,6 +141,16 @@
 				Width="130"
 				Click="AddNoteButton_Click"
 				Visibility="Hidden" />
+		<Button x:Name="DeleteBillButton"
+				Grid.Column="0"
+				Grid.Row="0"
+				Content="Видалити рахунок"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Margin="0,0,0,0"
+				Width="130"
+				Visibility="Hidden"
+				Click="DeleteBillButton_Click" />
 		<Button x:Name="BackButton"
 				Grid.Column="0"
 				Grid.Row="0"
@@ -226,6 +236,9 @@
 				  VerticalAlignment="Top"
 				  Width="419">
 			<DataGrid.Columns>
+				<DataGridTextColumn Header="Id"
+									Binding="{Binding Id}"
+									Visibility="Hidden" />
 				<DataGridTextColumn Header="Назва"
 									Binding="{Binding Name}"
 									MaxWidth="200" />
